removed Gradle tasks, replaced with run main()